--- a/Form 1/css/styles.css
+++ b/Form 1/css/styles.css
@@ -31,6 +31,7 @@ body {
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
     color: rgba(255, 255, 255, 0.844);
+    font-family: pacifico;
 }
 /* form */
 .center form {
